# game-ai

./: .gitignore  CMakeLists.txt  Convert-VcprojToVcxproj.ps1  Convertir-Projets.cmd  Generate-Solution.ps1  Generer-Solution.cmd
Buckland_Chapter2-State Machines/WestWorld1/: CMakeLists.txt
Buckland_Chapter2-State Machines/WestWorldWithMessaging/: CMakeLists.txt
Buckland_Chapter2-State Machines/WestWorldWithWoman/: CMakeLists.txt
Buckland_Chapter3-Steering Behaviors/: CMakeLists.txt
Buckland_Chapter4-SimpleSoccer/: CMakeLists.txt
Buckland_Chapter5-Pathfinder/: CMakeLists.txt
Buckland_Chapter6_Scripting_Source/CreatingClassesUsingLuabind/: CMakeLists.txt
Buckland_Chapter6_Scripting_Source/ExposingCPPClassesUsingLuabind/: CMakeLists.txt
Buckland_Chapter6_Scripting_Source/ExposingCPPFunctionsToLua/: CMakeLists.txt
Buckland_Chapter6_Scripting_Source/ScriptedStateMachine/: CMakeLists.txt
Buckland_Chapter6_Scripting_Source/StartHere/: CMakeLists.txt
Buckland_Chapter6_Scripting_Source/cpp_using_lua/: CMakeLists.txt
Buckland_Chapter6_Scripting_Source/lua_using_cpp/: CMakeLists.txt
Buckland_Chapter7 to 10_Raven/: CMakeLists.txt  Directory.Build.props  Raven.sln  Raven.vcxproj  Raven.vcxproj.filters  Raven_Bot.h  Raven_Game.h  Raven_WeaponSystem.cpp  Script1.rc
Buckland_Chapter7 to 10_Raven/2d/: Vector2D.h  Wall2D.h
Buckland_Chapter7 to 10_Raven/Script/: scriptor.h
Buckland_Chapter7 to 10_Raven/Time/: PrecisionTimer.cpp  PrecisionTimer.h
Buckland_Chapter7 to 10_Raven/fuzzy/: FuzzySet.h  fuzzyvariable.h
Buckland_Chapter7 to 10_Raven/game/: BaseGameEntity.h  MovingEntity.h
Buckland_Chapter7 to 10_Raven/goals/: Goal_Composite.h
Buckland_Chapter7 to 10_Raven/graph/: NodeTypeEnumerations.h  SparseGraph.h
Buckland_Chapter7 to 10_Raven/lua/: luahelperfunctions.h
Buckland_Chapter7 to 10_Raven/misc/: Cgdi.h  TypeToString.h  WindowUtils.cpp  utils.h  windowutils.h
Common/cmake/: AddLua.cmake  AddLuabind.cmake
Common/cmake/compat/: afxres.h
